PersonalWebsite/Content/stylesheets/app.css
/************************************
 * SHARED
 ***********************************/

a:hover { text-decoration: underline; }
a.button:hover { text-decoration: none; }
a.label:hover { text-decoration: none; color: white; background: #2286a4; }
a.label.alert:hover { background-color: #a70e12; }
a.label.success:hover { background-color: #4d871d; }
a.label.secondary:hover { background-color: #b6b6b6; color: #2e2e2e; }

p { margin: 0 0 14px 0; }

.label-spacing { margin-right: 5px; }
.spacer { width: 100%; height: 20px; }

.header { width: 100%; background: #e9e9e9; border-bottom: 1px solid #ddd; }
.header .row { padding: 10px 5px; }
.header h1 { font-size: 1.4em; margin: 0; padding: 0; }
.header ul { list-style: none; float: right; margin: 3px 0 0 0; padding: 0; }
.header ul li { float: left; margin: 5px 0 0 5px; }
.header ul li a { color: #444; display: block; background: #ddd; padding: 5px 20px; outline: none; }
.header ul li a:hover { color: black; background: #ccc; text-decoration: none; }
.header ul li.active a { color: #eee; background: #2ba6cb; }
.header ul li.active a:hover { color: #fff; background: #1e728c; }

@media only screen and (max-width: 767px) {
  .header .row div { width: 100%; text-align: center; }
  .header .row div ul { float: none; display: inline-block; margin: 5px 0 0 0; padding: 0; zoom:1; *display: inline; }  
}

/* general adminbar says: it's a traaaap */
.adminbar { width: 100%; background: #f2f2f2; border-bottom: 1px solid #e9e9e9; }
.adminbar .row { padding: 10px 5px; line-height: 22px; }
.adminbar .inline-list { margin: 0 0 0 -22px; }
/* Why 22px? foundation.css:762 -> ul.inline-list > li, ul.link-list > li { list-style: none; float: left; margin-left: 22px; display: block; } */

.pi { text-align: right; padding: 70px 0 10px 0; }
.pi span { font-weight: bold; font-size: 90%; color: #aaa; border-bottom: dotted 1px #ccc; cursor: help; }
.pi span:hover { font-family: "Courier New", monospace; font-weight: normal; border: none; }

.field-validation-error { color: #96160B; font-size: 90%; }
.validation-summary-errors ul { list-style: none; }
.validation-summary-errors ul li { color: #96160B; font-size: 90%; }

/* change to 50ms, eradicate laggy feeling */
.button {
    -webkit-transition: background-color 0.05s ease-in-out;
    -moz-transition: background-color 0.05s ease-in-out;
    -o-transition: background-color 0.05s ease-in-out;
    transition: background-color 0.05s ease-in-out;
}

/************************************
 * ADMIN
 ***********************************/
.account-button { float: right; width: 100%; margin-bottom: 5px; }
.account-failedattempts { list-style: none; }
.account-failedattempts li { font-size: 90%; }

.account-update-password { }
.account-update-password h4 { text-align: center; }
.account-update-password-button { width: 50%; float: right; clear: right; margin-bottom: 5px; }

/************************************
 * HOME
 ***********************************/
.welcome {    
    padding: 50px 0; text-align: center; background: #2ba6cb;    
    background-image: linear-gradient(bottom, rgb(43,143,171) 0%, rgb(43,166,203) 100%);
    background-image: -o-linear-gradient(bottom, rgb(43,143,171) 0%, rgb(43,166,203) 100%);
    background-image: -moz-linear-gradient(bottom, rgb(43,143,171) 0%, rgb(43,166,203) 100%);
    background-image: -webkit-linear-gradient(bottom, rgb(43,143,171) 0%, rgb(43,166,203) 100%);
    background-image: -ms-linear-gradient(bottom, rgb(43,143,171) 0%, rgb(43,166,203) 100%);
    background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0, rgb(43,143,171)), color-stop(1, rgb(43,166,203)) );
}

.welcome h1 { font-size: 500%; color: white; }
.welcome h2 { font-size: 200%; color: #fafafa; }
@media only screen and (max-width: 767px) {
    .welcome { margin: 0 25px; padding: 25px 0; }    
    .welcome h1 { font-size: 300%; }
    .welcome h2 { font-size: 150%; }
}

.infoboxes { margin: 12px auto; }
.infoboxes .iconic { font-weight: normal; font-size: 100%; float: right; }
.infoboxes div { background: #eee; box-sizing: border-box; }
.infoboxes div.infoleft { border-right: 6px solid white; }
.infoboxes div.infocentre { border-left: 3px solid white; border-right: 3px solid white; }
.infoboxes div.inforight { border-left: 6px solid white; }

/*.choices { text-align: center; padding: 40px 0 10px 0; }
.choices .row { margin-bottom: 20px; }
.choices blockquote { text-align: left; }*/

/************************************
 * PROFILE
 ***********************************/
.profile .portrait { text-align: center; } 
.profile .portrait img { padding: 3px; border: 1px solid #ccc; }

/*---- SKILL/TRAIT NOGGIN ------------- */
.profile p.skills { text-align: center; font-size: 90%; font-weight: bold; margin: 15px 0 2px 0; }
.profile .progress { margin: 5px 0; }
.profile .progress .meter { color: white; line-height: 20px; padding-left: 4px; font-size: 12px; font-weight: bold; }
.profile .progress.secondary .meter { color: white; background: #aaa; }
.profile .progress .meter.width10 { width: 10%; }
.profile .progress .meter.width10.outside { color: #2ba6cb; text-indent: 10%; }
.profile .progress .meter.width20 { width: 20%; }
.profile .progress .meter.width20.outside { color: #2ba6cb; text-indent: 20%; }
.profile .progress .meter.width30 { width: 30%; }
.profile .progress .meter.width30.outside { color: #2ba6cb; text-indent: 30%; }
.profile .progress .meter.width40 { width: 40%; }
.profile .progress .meter.width40.outside { color: #2ba6cb; text-indent: 40%; }
.profile .progress .meter.width50 { width: 50%; }
.profile .progress .meter.width60 { width: 60%; }
.profile .progress .meter.width70 { width: 70%; }
.profile .progress .meter.width80 { width: 80%; }
.profile .progress .meter.width90 { width: 90%; }
.profile .progress .meter.width100 { width: 100%; }
.profile .progress .meter.has-tip { color: white; border: none; }

.profile .aboutme { padding: 4px 8px; background: #eee; }
.profile .aboutme p { font-size: 90%; margin: 5px 0; }

.profile .trait { display: block; width: 100%; padding: 4px; margin: 5px 0; }
.profile .trait.has-tip { color: white; border: none;  }

.profile #coderbits { text-align: center; }
.profile #coderbits img { margin-top: 145px; }

.profile .coderbits_footer { margin: 40px 10px 0 15px; }
.profile .coderbits_footer img { float: right; margin-top: -12px; }
.profile .coderbits_footer p { float: left; }

/*---- GITHUB ------------------------- */
.profile .github p { margin: 0 0 2px 0; }
.profile .github h5 { margin: 20px 0 5px 0; }
.profile .github .repo { padding: 8px 0; }
.profile .github .repo .icon { float: left; width: 8%; text-align: left; padding-top: 3px; }
.profile .github .repo .name { float: left; width: 72%; }
.profile .github .repo .name .description { color: #333; font-size: 90%; display: inline-block; padding: 3px 0; line-height: 1.2em; }
.profile .github .repo .gitstar { float: left; width: 20%; text-align: right; }
.profile .github .clear { clear: both; }

/*---- STACK OVERFLOW ----------------- */
.profile .stackoverflow p { margin: 0 0 2px 0; }
.profile .stackoverflow h5 { margin: 20px 0 5px 0; }
.profile .stackoverflow .badge_gold { background: #FFD700; color: #998100; }
.profile .stackoverflow .badge_silver { background: #C0C0C0; color: #666666; }
.profile .stackoverflow .badge_bronze { background: #CD7F32; color: #804F1F; }
.profile .stackoverflow .votes_up { background: #00C200; color: #006000; }
.profile .stackoverflow .votes_down { background: #C20000; color: #600000; }


/************************************
 * CONTACT
 ***********************************/
.contactform textarea { height: 140px; }

/************************************
 * BLOG
 ***********************************/
pre, code { background: #eee; line-height: 22px; font-weight: normal; border: none;
            font-family: Consolas, 'Courier New', monospace, serif; }
pre {
    padding: 5px; margin: 0 0 18px 0;
    white-space: pre-wrap; /* css-3 */
    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
    white-space: -pre-wrap; /* Opera 4-6 */
    white-space: -o-pre-wrap; /* Opera 7 */
    word-wrap: break-word; /* Internet Explorer 5.5+ */
}
code { padding: 1px 5px; margin: 0; }
pre code { padding: 0; }

.blog-post h1 { font-size: 20px; line-height: 20px; margin: 10px 0 5px 0; padding-bottom: 5px; border-bottom: 1px dotted black; }
.blog-post h2 { font-size: 18px; line-height: 18px; margin: 9px 0 5px 0; }
.blog-post h3 { font-size: 16px; line-height: 16px; margin: 8px 0 4px 0; }
.blog-post h4 { font-size: 14px; line-height: 14px; margin: 7px 0 4px 0; }
.blog-post h5 { font-size: 12px; line-height: 12px; margin: 6px 0 3px 0; }

.blog-post ul { margin-left: 18px; }

/*---- RECENT POSTS SIDEBAR ----------- */
.bloglist h5 { margin: 5px 0; }
.bloglist ul { list-style: none; }
.bloglist ul li { padding: 0.4em 0; }
.bloglist ul li .post-link { margin: 0; padding: 0; line-height: 1.2em; }
.bloglist ul li .post-date { margin: 0; padding: 0; font-size: 80%; }
.bloglist ul li .post-views { margin: 0; padding: 0; font-size: 80%; }

/*---- TAG CLOUD ---------------------- */
.tagcloud { margin-bottom: 20px; }
.tagcloud h5 { margin: 10px 0; }
.tagcloud p { overflow: hidden; }
.tagcloud .big { font-size: 110%; }
.tagcloud .bigger { font-size: 130%; }
.tagcloud .biggest { font-size: 150%; }

/*---- BLOG ARCHIVE ------------------- */
.blogarchive { margin-bottom: 20px; }
.blogarchive h5 { margin: 5px 0; }
.blogarchive .hierarchy { list-style: none; margin: 0; color: #555; }
.blogarchive .hierarchy ul { padding-left: 20px; padding: 5px 0 5px 15px; }
.blogarchive .hierarchy .archivedate { cursor: pointer; }
.blogarchive .hierarchy .archivepost { line-height: 1.2em; padding: 8px 0 0 16px; text-indent: -16px; }

/*---- MANAGEMENT --------------------- */
.blog-manage-top h4 { line-height: 32px; padding: 2px 0; margin: 0; }
.blog-manage-top .postfix { line-height: 12px; }

.blog-manage-table { border-collapse: collapse; border-spacing: 0; }
.blog-manage-table td { vertical-align: middle; }
.blog-manage-td-post { width: 83%; line-height: 150%; }
/*.blog-manage-td-views, .blog-manage-td-comments { width: 10%; }
.blog-manage-td-comments img, .blog-manage-td-views img { float: left; margin: 1px 3px 0 0; }*/
.blog-manage-td-date { width: 12%; }

.blog-manage-td-check { width: 5%; vertical-align: middle; }
.blog-manage-td-check input[type="checkbox"] { display: none; }
.blog-manage-td-check input[type="checkbox"] + label span {
    display: inline-block; width: 18px; height: 18px; margin: -1px 4px 0 0;
    vertical-align: middle; cursor: pointer; background: url(/Content/images/checkbox.png);
}
.blog-manage-td-check input[type="checkbox"]:hover + label span {
    background: url(/Content/images/checkbox_hover.png);
}
.blog-manage-td-check input[type="checkbox"]:checked + label span {
    background: url(/Content/images/checkbox_checked.png);
}

.blog-manage-date-tooltip { font-weight: normal; font-style: italic; color: #444; }

/*---- NEW/EDIT ----------------------- */
.blog-editor-buttons { text-align: right; }
.blog-editor-buttons .button { height: 32px; line-height: 16px; margin: 0; outline: none; }
.blog-editor-input input { outline: none; }
.blog-editor-textarea textarea { min-height: 500px; resize: vertical; outline: none; }

.blog-editor-tags { margin-bottom: 15px; }

.blog-editor-validation-summary ul { list-style: none; }
.blog-editor-validation-summary ul li { color: #96160B; font-size: 90%; }

@media only screen and (max-width: 767px) {
    .blog-editor-label { text-align: center; width: 100%; line-height: 60px; }
    .blog-editor-buttons { margin-bottom: 20px; }
    .blog-editor-buttons .button { height: 32px; line-height: 16px; margin: 5px 0; }
}

/*---- VIEW --------------------------- */

.post-tag-text { color: #aaa; font-size: 90%; }

